@@ -5,7 +5,7 @@ stopIfLearnerParams = function(par.set) {
 
 
 stopIfFunOrUntypedParams = function(par.set) {
-  types = getTypes(par.set)
+  types = getParamTypes(par.set)
   not.ok = intersect(c("untyped", "function"), types)
   if (length(not.ok) > 0L)
     stopf("Parameters of this type are not allowed, but were found: %s", collapse(not.ok))
